Closed
Bug 991273
(MediaSegmentBase)
Opened 7 years ago
Closed 7 years ago
Intermittent test_dataChannel_basicVideo.html,855796.html | application crashed [@ mozilla::MediaSegmentBase<mozilla::VideoSegment, ...] after "Assertion failure: aStart >= 0 && aEnd <= aSource.mDuration (Slice out of range)"
Categories
(Core :: Audio/Video, defect)
Core
Audio/Video
Tracking
()
RESOLVED
FIXED
mozilla32
Tracking | Status | |
---|---|---|
firefox30 | --- | unaffected |
firefox31 | --- | fixed |
firefox32 | --- | fixed |
firefox-esr24 | --- | unaffected |
b2g-v1.4 | --- | unaffected |
b2g-v2.0 | --- | fixed |
People
(Reporter: jesup, Assigned: padenot)
References
Details
(4 keywords)
Attachments
(1 file)
1.23 KB,
text/plain
|
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details |
https://tbpl.mozilla.org/php/getParsedLog.php?id=37156180&tree=Mozilla-Inbound#error0 MediaSegment.h:271 MOZ_ASSERT(aStart >= 0 && aEnd <= aSource.mDuration, "Slice out of range");
Reporter | ||
Updated•7 years ago
|
Summary: Intermittent MOZ_CRASH for slice-out-of-range in AppendSliceInternal() → Intermittent MOZ_ASSERT for slice-out-of-range in AppendSliceInternal()
Updated•7 years ago
|
Keywords: crash
Summary: Intermittent MOZ_ASSERT for slice-out-of-range in AppendSliceInternal() → Intermittent test_dataChannel_basicVideo.html | application crashed [@ mozilla::MediaSegmentBase<mozilla::VideoSegment, ...] after "Assertion failure: aStart >= 0 && aEnd <= aSource.mDuration (Slice out of range)"
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 3•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=37687131&tree=Mozilla-Inbound
Comment 4•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=37685952&tree=Mozilla-Inbound
Comment 5•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=37731115&tree=Mozilla-Inbound
Comment 6•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=37734857&tree=Mozilla-Inbound
Comment 7•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=37775494&tree=Mozilla-Inbound
Updated•7 years ago
|
Comment 9•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=37858418&tree=Mozilla-Inbound
OS: Android → All
Hardware: ARM → All
Reporter | ||
Comment 10•7 years ago
|
||
Seen on Android and Mac (10.6 mostly, one 10.8) so far
Comment 11•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=37889536&tree=Mozilla-Inbound
Comment 12•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=37891831&tree=Mozilla-Central
Comment 16•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=37971608&tree=Mozilla-Inbound
Comment 19•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38021680&tree=Mozilla-Inbound
Comment 20•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38024648&tree=Mozilla-Inbound
Comment 21•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38113653&tree=Mozilla-Inbound
Summary: Intermittent test_dataChannel_basicVideo.html | application crashed [@ mozilla::MediaSegmentBase<mozilla::VideoSegment, ...] after "Assertion failure: aStart >= 0 && aEnd <= aSource.mDuration (Slice out of range)" → Intermittent test_dataChannel_basicVideo.html,855796.html | application crashed [@ mozilla::MediaSegmentBase<mozilla::VideoSegment, ...] after "Assertion failure: aStart >= 0 && aEnd <= aSource.mDuration (Slice out of range)"
Comment 22•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38114004&tree=Mozilla-Inbound
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 25•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38149248&tree=Mozilla-Inbound https://tbpl.mozilla.org/php/getParsedLog.php?id=38149047&tree=Mozilla-Inbound https://tbpl.mozilla.org/php/getParsedLog.php?id=38147533&tree=Mozilla-Inbound https://tbpl.mozilla.org/php/getParsedLog.php?id=38147027&tree=Mozilla-Inbound https://tbpl.mozilla.org/php/getParsedLog.php?id=38147025&tree=Mozilla-Inbound
Comment 26•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38140059&tree=Mozilla-Central
Comment 28•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38158156&tree=Mozilla-Central
Comment 29•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38168164&tree=Mozilla-Inbound
Comment 30•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38179191&tree=Mozilla-Inbound
Comment 31•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38190782&tree=Mozilla-Inbound
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 38•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38345286&tree=Mozilla-Central
Comment 39•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38345620&tree=Mozilla-Inbound
Comment 40•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38352741&tree=Mozilla-Inbound
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 43•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38412265&tree=Mozilla-Inbound
Comment 44•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38416780&tree=Mozilla-Inbound
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 48•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38442483&tree=Mozilla-Inbound
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 53•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38548712&tree=Fx-Team Is somebody going to look into this frequent, widespread (and therefore PITA to star) orange some time soon? It's been happening for 3 weeks now with no activity in the bug indicating it's being looked at by anybody.
Flags: needinfo?(paul)
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 56•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38548718&tree=Fx-Team https://tbpl.mozilla.org/php/getParsedLog.php?id=38559346&tree=Mozilla-Inbound
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 59•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38590345&tree=B2g-Inbound
status-firefox31:
--- → affected
Comment hidden (Legacy TBPL/Treeherder Robot) |
Assignee | ||
Comment 63•7 years ago
|
||
I believe the actual cause is being worked on in other bugs, sorry about that.
Flags: needinfo?(paul)
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 70•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38742441&tree=Mozilla-Central
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 72•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38781485&tree=Mozilla-Inbound
Comment 73•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38803395&tree=Mozilla-Central
Comment 74•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38804247&tree=Mozilla-Aurora
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 80•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38893974&tree=Mozilla-Inbound
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 82•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=38980038&tree=Mozilla-Central
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 88•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=39048155&tree=Mozilla-Inbound
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 92•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=39080894&tree=Mozilla-Inbound
Alias: MediaSegmentBase
Comment 93•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=39129418&tree=Mozilla-Central
Comment 95•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=39149151&tree=Mozilla-Inbound
Updated•7 years ago
|
status-b2g-v1.4:
--- → unaffected
status-b2g-v2.0:
--- → affected
status-firefox30:
--- → unaffected
status-firefox32:
--- → affected
status-firefox-esr24:
--- → unaffected
Comment 97•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=39157945&tree=Mozilla-Central
Assignee | ||
Comment 100•7 years ago
|
||
Ryan, looks like 926606 is the same problem (although with a different stack), and Jesse has provided a testcase. I've checked locally, I can repro there. I've tried to fix it, but I'm a bit short on time at the moment, I'll see what I can do. It seems to me that the problem is that for some reason, track is not ended, but we have less data than we though we should have (basically, we are underruning).
Depends on: 926606
Flags: needinfo?(paul)
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 102•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=39223233&tree=Mozilla-Inbound
Comment 104•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=39229103&tree=B2g-Inbound
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 108•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=39287504&tree=Mozilla-Inbound
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 112•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=39380037&tree=Mozilla-Inbound
Comment 113•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=39385790&tree=Mozilla-Central
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 115•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=39390888&tree=Mozilla-Inbound
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 118•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=39490215&tree=Mozilla-Inbound
Comment 119•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=39503389&tree=Fx-Team Can we consider downgrading this to a warning for the time-being?
Flags: needinfo?(paul)
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 121•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=39518646&tree=Mozilla-Inbound
Assignee | ||
Comment 122•7 years ago
|
||
yeah. https://hg.mozilla.org/integration/mozilla-inbound/rev/971b840c40ff
Flags: needinfo?(paul)
Comment 123•7 years ago
|
||
From comment 121 for revision 62b1d56d91e5: Assertion failure: aStart >= 0 && aEnd <= aSource.mDuration (Slice out of range), at /builds/slave/m-in-osx64-d-00000000000000000/build/content/media/MediaSegment.h:295 mozilla::TrackUnionStream::ProcessInput(long long, long long, unsigned int) [content/media/TrackUnionStream.h:77] https://hg.mozilla.org/integration/mozilla-inbound/annotate/62b1d56d91e5/content/media/MediaSegment.h#l295 https://hg.mozilla.org/integration/mozilla-inbound/annotate/62b1d56d91e5/content/media/TrackUnionStream.h#l77
Keywords: leave-open
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 127•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=40198655&tree=Mozilla-Aurora
Comment 128•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=40561893&tree=Mozilla-Aurora
Comment 129•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=40733917&tree=Mozilla-Aurora Can we please nominate this for uplift to Aurora as well?
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 131•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=41316706&tree=Mozilla-Aurora
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 133•7 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=42295093&tree=Mozilla-Beta Please can we land this on Beta31? This technically can't land without approval since it touches non-test code.
Flags: needinfo?(paul)
Assignee | ||
Comment 134•7 years ago
|
||
Sorry Ryan, I missed your first message, I can ask for uplift.
Flags: needinfo?(paul)
Assignee | ||
Comment 135•7 years ago
|
||
This is not a functional change, but Ryan tells me he would be happier with it on all the branches. This is code that is being reworked at the moment, this probably will go away with the refactoring.
Attachment #8445228 -
Flags: approval-mozilla-beta?
Attachment #8445228 -
Flags: approval-mozilla-aurora?
Comment 136•7 years ago
|
||
Comment on attachment 8445228 [details]
Warn instead of asserting to make the Sheriff's life easier
Approving without risk evaluation. Looking at the patch, I am not afraid it is going to break anything.
Attachment #8445228 -
Flags: approval-mozilla-beta?
Attachment #8445228 -
Flags: approval-mozilla-beta+
Attachment #8445228 -
Flags: approval-mozilla-aurora?
Attachment #8445228 -
Flags: approval-mozilla-aurora+
Comment 137•7 years ago
|
||
https://hg.mozilla.org/releases/mozilla-beta/rev/c5eabaa4b266 Given comment 135, I'm going to go ahead and call this bug fixed since it sounds like any future fixes for the underlying problem won't be coming from this bug anyway. Note that this landed on m-c when it was still tracking Gecko 32, so this only needed to land on beta.
Status: NEW → RESOLVED
Closed: 7 years ago
Keywords: leave-open
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Updated•6 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•