Bug 991273 - Warn instead of asserting until we can find a solution.