content/media/MediaSegment.h
@@ -292,7 +292,7 @@ protected:
                            TrackTicks aStart, TrackTicks aEnd)
   {
     MOZ_ASSERT(aStart <= aEnd, "Endpoints inverted");
-    MOZ_ASSERT(aStart >= 0 && aEnd <= aSource.mDuration, "Slice out of range");
+    NS_WARN_IF_FALSE(aStart >= 0 && aEnd <= aSource.mDuration, "Slice out of range");
     mDuration += aEnd - aStart;
     TrackTicks offset = 0;
     for (uint32_t i = 0; i < aSource.mChunks.Length() && offset < aEnd; ++i) {
